--- a/GeneticMutator.uplugin
+++ b/GeneticMutator.uplugin
@@ -1,14 +1,14 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "39487C504EBEF434220C129B27585F2E",
+	"VersionName": "DFBA8475409F033A5D37029ECB354492",
 	"FriendlyName": "Genetic Mutator",
 	"Description": "Adds a variant of the Tek Trough that boosts mutation rates and adds Gene Traits to baby dinos.&cf_ugcID=1195096",
 	"Category": "UGC",
 	"CreatedBy": "SuperiorPanda",
 	"CreatedByURL": "",
 	"DocsURL": "",
-	"MarketplaceURL": "https://legacy.curseforge.com/ark-survival-ascended/mods/genetic-mutator",
+	"MarketplaceURL": "https://www.curseforge.com/ark-survival-ascended/mods/genetic-mutator",
 	"SupportURL": "https://ko-fi.com/superiorpanda",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
